--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@
          "if": "${{ (inputs.distributions == '' || contains(format(',{0},', inputs.distributions), format(',{0},', 'centos-10'))) && (inputs.architectures == '' || contains(format(',{0},', inputs.architectures), format(',{0},', 'ARM64'))) }}",
          "uses": "./.github/workflows/build_packages.yml",
          "with": {
+            "asan": "${{ inputs.asan }}",
             "branch": "${{ inputs.branch }}",
             "experimental": "${{ inputs.experimental }}",
             "name": "centos-10",
@@ -16,6 +17,7 @@
          "if": "${{ (inputs.distributions == '' || contains(format(',{0},', inputs.distributions), format(',{0},', 'centos-10'))) && (inputs.architectures == '' || contains(format(',{0},', inputs.architectures), format(',{0},', 'X64'))) }}",
          "uses": "./.github/workflows/build_packages.yml",
          "with": {
+            "asan": "${{ inputs.asan }}",
             "branch": "${{ inputs.branch }}",
             "experimental": "${{ inputs.experimental }}",
             "name": "centos-10",
@@ -28,6 +30,7 @@
          "if": "${{ (inputs.distributions == '' || contains(format(',{0},', inputs.distributions), format(',{0},', 'centos-9'))) && (inputs.architectures == '' || contains(format(',{0},', inputs.architectures), format(',{0},', 'ARM64'))) }}",
          "uses": "./.github/workflows/build_packages.yml",
          "with": {
+            "asan": "${{ inputs.asan }}",
             "branch": "${{ inputs.branch }}",
             "experimental": "${{ inputs.experimental }}",
             "name": "centos-9",
@@ -40,6 +43,7 @@
          "if": "${{ (inputs.distributions == '' || contains(format(',{0},', inputs.distributions), format(',{0},', 'centos-9'))) && (inputs.architectures == '' || contains(format(',{0},', inputs.architectures), format(',{0},', 'X64'))) }}",
          "uses": "./.github/workflows/build_packages.yml",
          "with": {
+            "asan": "${{ inputs.asan }}",
             "branch": "${{ inputs.branch }}",
             "experimental": "${{ inputs.experimental }}",
             "name": "centos-9",
@@ -52,6 +56,7 @@
          "if": "${{ (inputs.distributions == '' || contains(format(',{0},', inputs.distributions), format(',{0},', 'debian-bookworm'))) && (inputs.architectures == '' || contains(format(',{0},', inputs.architectures), format(',{0},', 'ARM64'))) }}",
          "uses": "./.github/workflows/build_packages.yml",
          "with": {
+            "asan": "${{ inputs.asan }}",
             "branch": "${{ inputs.branch }}",
             "experimental": "${{ inputs.experimental }}",
             "name": "debian-bookworm",
@@ -64,6 +69,7 @@
          "if": "${{ (inputs.distributions == '' || contains(format(',{0},', inputs.distributions), format(',{0},', 'debian-bookworm'))) && (inputs.architectures == '' || contains(format(',{0},', inputs.architectures), format(',{0},', 'X64'))) }}",
          "uses": "./.github/workflows/build_packages.yml",
          "with": {
+            "asan": "${{ inputs.asan }}",
             "branch": "${{ inputs.branch }}",
             "experimental": "${{ inputs.experimental }}",
             "name": "debian-bookworm",
@@ -76,6 +82,7 @@
          "if": "${{ (inputs.distributions == '' || contains(format(',{0},', inputs.distributions), format(',{0},', 'debian-trixie'))) && (inputs.architectures == '' || contains(format(',{0},', inputs.architectures), format(',{0},', 'ARM64'))) }}",
          "uses": "./.github/workflows/build_packages.yml",
          "with": {
+            "asan": "${{ inputs.asan }}",
             "branch": "${{ inputs.branch }}",
             "experimental": "${{ inputs.experimental }}",
             "name": "debian-trixie",
@@ -88,6 +95,7 @@
          "if": "${{ (inputs.distributions == '' || contains(format(',{0},', inputs.distributions), format(',{0},', 'debian-trixie'))) && (inputs.architectures == '' || contains(format(',{0},', inputs.architectures), format(',{0},', 'X64'))) }}",
          "uses": "./.github/workflows/build_packages.yml",
          "with": {
+            "asan": "${{ inputs.asan }}",
             "branch": "${{ inputs.branch }}",
             "experimental": "${{ inputs.experimental }}",
             "name": "debian-trixie",
@@ -100,6 +108,7 @@
          "if": "${{ (inputs.distributions == '' || contains(format(',{0},', inputs.distributions), format(',{0},', 'ubuntu-jammy'))) && (inputs.architectures == '' || contains(format(',{0},', inputs.architectures), format(',{0},', 'ARM64'))) }}",
          "uses": "./.github/workflows/build_packages.yml",
          "with": {
+            "asan": "${{ inputs.asan }}",
             "branch": "${{ inputs.branch }}",
             "experimental": "${{ inputs.experimental }}",
             "name": "ubuntu-jammy",
@@ -112,6 +121,7 @@
          "if": "${{ (inputs.distributions == '' || contains(format(',{0},', inputs.distributions), format(',{0},', 'ubuntu-jammy'))) && (inputs.architectures == '' || contains(format(',{0},', inputs.architectures), format(',{0},', 'X64'))) }}",
          "uses": "./.github/workflows/build_packages.yml",
          "with": {
+            "asan": "${{ inputs.asan }}",
             "branch": "${{ inputs.branch }}",
             "experimental": "${{ inputs.experimental }}",
             "name": "ubuntu-jammy",
@@ -124,6 +134,7 @@
          "if": "${{ (inputs.distributions == '' || contains(format(',{0},', inputs.distributions), format(',{0},', 'ubuntu-noble'))) && (inputs.architectures == '' || contains(format(',{0},', inputs.architectures), format(',{0},', 'ARM64'))) }}",
          "uses": "./.github/workflows/build_packages.yml",
          "with": {
+            "asan": "${{ inputs.asan }}",
             "branch": "${{ inputs.branch }}",
             "experimental": "${{ inputs.experimental }}",
             "name": "ubuntu-noble",
@@ -136,6 +147,7 @@
          "if": "${{ (inputs.distributions == '' || contains(format(',{0},', inputs.distributions), format(',{0},', 'ubuntu-noble'))) && (inputs.architectures == '' || contains(format(',{0},', inputs.architectures), format(',{0},', 'X64'))) }}",
          "uses": "./.github/workflows/build_packages.yml",
          "with": {
+            "asan": "${{ inputs.asan }}",
             "branch": "${{ inputs.branch }}",
             "experimental": "${{ inputs.experimental }}",
             "name": "ubuntu-noble",
@@ -152,6 +164,10 @@
             "architectures": {
                "required": false,
                "type": "string"
+            },
+            "asan": {
+               "required": false,
+               "type": "boolean"
             },
             "branch": {
                "required": false,
