--- a/.github/workflows/build_packages.yml
+++ b/.github/workflows/build_packages.yml
@@ -27,6 +27,10 @@ on:
         required: false
         type: string
         description: 'Repository to build from (owner/repo format)'
+      asan:
+        required: false
+        type: boolean
+        description: 'Build with AddressSanitizer (ASAN) enabled'
 
     outputs:
       revision:
@@ -93,9 +97,16 @@ jobs:
           export DEBIAN=0
           export DOCKER_IMAGE=${{ inputs.name }}
           export DOCKER_REPO=ghcr.io/rspamd/rspamd-build-docker
+          export PRESERVE_ENVVARS=ASAN,DEB_BUILD_OPTIONS
           export RELEASE=$PACKAGE_VERSION
           export RPM=0
           export VERSION=$KAGOME_VERSION
+
+           # Build with ASAN if requested
+           if [[ "${{ inputs.asan }}" == "true" ]]; then
+             export ASAN=1
+             export DEB_BUILD_OPTIONS=asan
+           fi
 
           mkdir -p "$BUILDDIR"
           echo "BUILDDIR=${BUILDDIR}" >> "$GITHUB_ENV"
